--- a/css/main.scss
+++ b/css/main.scss
@@ -40,13 +40,29 @@ $color-complement-4: #2A0200;
   padding: 40px 15px;
 }
 
+
+//==============================
+// Index
+//==============================
+
 .jumbotron {
-    background-color: $color-primary-0;
+    margin-bottom: -48px;
 }
 
 .jumbotron .container {
     padding-top: 40px;
 }
+
+//==============================
+// Pages
+//==============================
+body > div.container {
+    padding-top: 30px;
+}
+
+//==============================
+// Header/NavBar
+//==============================
 
 .navbar-brand {
     padding: 11px 15px 5px 15px;
@@ -58,6 +74,9 @@ div.navbar-brand {
     margin: 0;
 }
 
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { transform: rotate(10deg) scale(1.3); }
+
 img:not(.png) {
     width: 100%;
 }
@@ -66,7 +85,9 @@ img:not(.png) {
     width: 100%;
 }
 
+//==============================
 // Footer
+//==============================
 html {
   position: relative;
   min-height: 100%;
@@ -95,6 +116,3 @@ body {
   margin: 15px 0;
   color: lighten($gray-base, 77.7%);
 }
-
-.grow { transition: all .2s ease-in-out; }
-.grow:hover { transform: rotate(10deg) scale(1.3); }
